--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,23 +22,26 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@master
+    - name: Checkout source code
+      uses: actions/checkout@master
 
-      - name: Set up Node.js
-        uses: actions/setup-node@master
-        with:
-          node-version: 14.x
+    - name: Set up Node.js
+      uses: actions/setup-node@master
+      with:
+        node-version: 14.x
 
-      - name: Build page
-        run: yarn build
-        env:
-          NODE_ENV: production
+    - name: Install dependencies
+      run: yarn install
 
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          gidhub_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+    - name: Build page
+      run: yarn build
+      env:
+        NODE_ENV: production
+
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
 
 
